# clman

./: Cargo.toml  LICENSE  README.md
examples/julia/: clman.yaml
examples/julia/src/: color.cl  complex.cl  main.cl
examples/raytracer/: .gitignore  clman.yaml
examples/raytracer/src/: camera.cl  defs.cl  main.cl  ray.cl
examples/raytracer/src/object/: object.cl
src/: cl.rs  conf.rs  docker.rs  error.rs  git.rs  main.rs  parse.rs  utils.rs
src/cl/: main.cl
