[package]
name = "clman"
version = "0.1.0"
authors = ["Keyvan Kambakhsh <keyvankambakhsh@gmail.com>"]
description = "OpenCL Package Manager"
edition = "2018"

[dependencies]
ocl = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "2.33.1"
thiserror = "1.0.10"
walkdir = "2"
git2 = "0.13"
linked-hash-map = { version = "0.5.3", features = ["serde_impl"] }
